# Ray-tracer

gpu/: CMakeLists.txt  CUDAAnnotations.h  Color.cu  Color.cuh  Color.h  ErrorHandle.h  GPUArray.cuh  GPUArray.h  GPURayTracer.cpp  GPURayTracer.cu  GPURayTracer.cuh  GPURayTracer.h  Levels.cpp  Levels.h  Material.cpp  Material.h  Math.cuh  Math.h  Objects.cpp  Objects.cu  Objects.cuh  Objects.h  RayTraceResult.h  RayTracerKernel.cu  RayTracerKernel.cuh  TracerOptions.h  Vector.cuh  Vector.h  Viewport.h  main.cpp
sequencial/: .gitignore  CMakeLists.txt  Color.cpp  Color.h  Levels.cpp  Levels.h  Material.cpp  Material.h  Math.h  Objects.cpp  Objects.h  RayTracer.cpp  RayTracer.h  TracerOptions.h  Vector.h  main.cpp
